# consensus-engine

./: README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
examples/: demo.py
src/consensus_engine/: __init__.py  __main__.py  consensus.py
tests/: test_consensus.py
