[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "consensus-engine"
version = "1.0.0"
description = "Delphi-style iterative consensus engine for multi-agent AI systems — aggregates, scores, and converges divergent AI outputs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.scripts]
consensus = "consensus_engine.consensus:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
